templates/openelb_template.yaml
---
# Source: openelb/templates/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-openelb-manager
  labels:
    app.kubernetes.io/name: openelb
    helm.sh/chart: openelb-0.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: release-name-openelb-manager
  namespace: default
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    app.kubernetes.io/name: openelb
    helm.sh/chart: openelb-0.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: release-name-openelb-manager
  type: ClusterIP
---
# Source: openelb/templates/manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-openelb-manager
  namespace: default
  labels:
    app.kubernetes.io/name: openelb
    helm.sh/chart: openelb-0.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: release-name-openelb-manager
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: openelb
      helm.sh/chart: openelb-0.2.4
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "0.4.4"
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: release-name-openelb-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openelb
        helm.sh/chart: openelb-0.2.4
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "0.4.4"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: release-name-openelb-manager
    spec:
      serviceAccountName: openelb-manager
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: openelb
                helm.sh/chart: openelb-0.2.4
                app.kubernetes.io/instance: release-name
                app.kubernetes.io/version: "0.4.4"
                app.kubernetes.io/managed-by: Helm
                app.kubernetes.io/component: release-name-openelb-manager
            topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - command:
          - openelb-manager
        args:
          - --webhook-port=443
          - --api-hosts=:50051
        image: kubesphere/openelb:v0.4.4
        imagePullPolicy: IfNotPresent
        name: openelb-manager
        ports:
          - containerPort: 443
            name: webhook
            protocol: TCP
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - |
                gobgp -p 50051 global
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_TIME
        volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs/
            name: webhook-cert
            readOnly: true
      hostNetwork: true
      terminationGracePeriodSeconds: 10
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - name: webhook-cert
          secret:
            items:
              - key: key
                path: tls.key
              - key: cert
                path: tls.crt
            secretName: release-name-openelb-admission
---
# Source: openelb/templates/admission-webhooks/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: release-name-openelb-admission
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: release-name-openelb-manager
        namespace: default
        path: /validate-network-kubesphere-io-v1alpha2-svc
    failurePolicy: Fail
    name: mutating.eip.network.kubesphere.io
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services

    sideEffects: NoneOnDryRun
---
# Source: openelb/templates/admission-webhooks/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: openelb
    helm.sh/chart: openelb-0.2.4
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.4.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: release-name-openelb-admission
  name: release-name-openelb-admission
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: release-name-openelb-manager
        namespace: default
        path: /validate-network-kubesphere-io-v1alpha2-eip
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.eip.network.kubesphere.io
    rules:
      - apiGroups:
          - network.kubesphere.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - eips
    sideEffects: None
